<resources>
    <string name="app_name">Gibbs E-Library</string>

    <string name="bookLong">A philosophical exploration of the entire seven-book Harry Potter series

Harry Potter has been heralded as one of the most popular book series of all time and the philosophical nature of Harry, Hermione, and Ron\'s quest to rid the world of its ultimate evil is one of the many things that make this series special. The Ultimate Harry Potter and Philosophy covers all seven titles in J.K. Rowling\s groundbreaking series and takes fans back to Godric\s Hollow to discuss life after death, to consider what moral reasoning drove Harry to choose death, and to debate whether Sirius Black is a man or a dog.

With publication timed to coincide with the release of the movie Harry Potter and the Deathly Hallows (Part 1), this book will be the definitive guide for all fans looking to...

Source: Publisher</string>

    <string name="TextOne">Create Account</string>
    <string name="title_activity_login">activity_login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>

    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="textTwo">Your #1 Online Book Store!</string>
    <string name="loginButton">Login</string>
    <string name="Register_textLink">Don\'t have an account? Sign up Now</string>
    <string name="ForgotPassword_textLink">Forgot Password?</string>
    <string name="LoginPasswordHint">Password</string>
    <string name="email_addressHint">Email Address</string>
    <string name="joinExtra">Join the winning Team!</string>
    <string name="register_nowText">Register Now</string>
    <string name="TextOneLogin">Login</string>
    <string name="powered_by_gibbs_techText">Powered by Gibbs Tech©</string>
    <string name="gibbs_libraryText">GET STARTED!</string>
    <string name="full_name">Full Name</string>
    <string name="passwordRegisterHint">Password</string>
    <string name="textDisplay">STAY TUNED! GIBBS LIBRARY IS COMING!</string>
    <string name="gibbs_library_textBanner">Gibbs Library</string>
    <string name="landing_get_started">Get Started</string>
    <string name="homepage_log_out">LOG OUT</string>
    <string name="user_full_name">Loading Full Name...</string>
    <string name="user_age">Loading Age...</string>
    <string name="user_email_address">Loading Email Address... </string>
    <string name="user_log_out">Log out</string>
    <string name="user_welcome">Welcome</string>
    <string name="user_return_to_home_page">Return to Home Page!</string>
    <string name="skip_to_homepage">Continue as a guest</string>
    <string name="user_profile_picture">User profile picture</string>
    <string name="landing_image">landing image</string>
    <string name="welcome_to">Welcome to</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="home_page_fragment_textview">Welcome Home!</string>
    <string name="profile_fragment_textview">Dashboard</string>
    <string name="settings_fragment_textView">Dashboard</string>
    <string name="user_settings_textview">User Settings</string>
    <string name="admin_mode_switch">Admin Mode</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="todo">TODO</string>
    <string name="universal_digital">Universal Digital</string>
    <string name="gibbs_library_book_search_engine">Gibbs Library Book Search Engine</string>
    <string name="termsAndConditions">termsAndConditions</string>

    termsAndConditions

    <!--    //for gender suggestions-->
    <string-array name="suggestions">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>