<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/createAccount"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bookaholic_background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="28dp"
        android:text="@string/gibbs_library_textBanner"
        android:textColor="#FEFCFF"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/bannerReset2"
        android:layout_width="63dp"
        android:layout_height="61dp"
        android:layout_marginTop="68dp"
        app:layout_constraintEnd_toStartOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/splash_screen_logoo"
        android:contentDescription="TODO" />

    <EditText
        android:id="@+id/editLoginTextEmail"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="57dp"
        android:layout_marginEnd="57dp"
        android:layout_marginBottom="85dp"
        android:autofillHints=""
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:hint="@string/email_addressHint"
        android:inputType="textEmailAddress"
        android:textColor="#EFE6E6"
        android:textColorHint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/editLoginTextPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="129dp"
        android:layout_height="48dp"
        android:layout_marginTop="46dp"
        android:layout_marginBottom="46dp"
        android:backgroundTint="#350D75"
        android:text="@string/loginButton"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/forgotPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editLoginTextPassword"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editLoginTextPassword"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="57dp"
        android:layout_marginEnd="57dp"
        android:layout_marginBottom="162dp"
        android:autofillHints=""
        android:backgroundTint="#FCFBFD"
        android:ems="10"
        android:hint="@string/LoginPasswordHint"
        android:inputType="textPassword"
        android:textColorHint="#F4F3F3"
        app:layout_constraintBottom_toBottomOf="@+id/forgotPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="116dp"
        android:text="@string/ForgotPassword_textLink"
        android:textColor="#FBF9F9"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/loginHomePage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.202"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/RegisterLoginID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginTop="44dp"
        android:text="@string/Register_textLink"
        android:textColor="#F3EFEF"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/forgotPassword"
        app:layout_constraintTop_toBottomOf="@+id/buttonLogin" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="51dp"
        android:layout_height="41dp"
        android:layout_centerInParent="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="140dp"
        android:indeterminate="true"
        android:max="100"
        android:progress="0"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgotPassword"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/loginHomePage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:text="Just want to Chill?      Skip to HomePage"
        android:textColor="#ECE3E3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>